<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Name of Application -->
    <string name="app_name">GymRatTrax</string>
    <!-- Basic String Text -->
    <string name="workout_today">Today\'s Scheduled Workout</string>
    <!-- Name of Application -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_cardio_exercise">Cardio Exercise</string>
    <string name="title_activity_strength_exercise">Strength Exercise</string>
    <string name="title_activity_daily_workout">Daily Workout</string>
    <string name="title_activity_calorie_negation">Calorie Negation</string>
    <string name="title_activity_kilojoule_negation">Kilojoule Negation</string>
    <string name="title_activity_fitness_profile">Fitness Profile</string>
    <string name="title_activity_schedule">View Schedule</string>

    <string name="title_activity_settings">Settings</string>
    <string name="schedule_activity_add_event">Add Event</string>
    <string name="schedule_activity_back">BACK</string>
    <string name="title_activity_view_progress">View Progress</string>
    <string name="help_text">
    GymRatTrax\n
    GymRatTrax is a mobile application that replaces a physical workout journal.  You may record your workouts and track your progress all in
    one centralized location.\n\n
    Profile Setup\n
    Be sure to keep your profile up to date! Having accurate records will produce accurate data.  Be sure to weigh in occasionally.  You may
    set notifications to keep you on track.\n\n
    Workouts\n
    Select "Begin Workout" to load your scheduled workouts for the current day.  You may then select a workout to begin.  Within each workout,
    you may log the sets completed for strength workouts and also time completed for cardio workouts.  Your calories burned for the exercise
    will be displayed after you log a workout.  Click on the youtube button to load tutorial videos in case you do not know how to do a workout.\n\n
    Edit Schedule\n
    You may create and edit your workout schedule by clicking "Edit Schedule".  Here you will be able to add various workouts to your schedule and set
    which days and times you wish you workout.\n\n
    Progress Reports\n
    You may track your weight loss, total calories burned, and get suggestions for updating your workout schedule by clicking on "View Progress".
    </string>
    <string name="gym_rat_trax_version_num">GymRatTrax Version 0.1</string>
    <string name="title_activity_cardio_workout">Cardio Workout</string>
    <string name="title_activity_view_schedule">View Schedule Activity</string>
    <string name="title_activity_strength_workout">Strength Workout Activity</string>
    <string name="hello_world">hello_world</string>
    <string name="title_activity_profile_setup">Profile Setup</string>
    <string name="schedule_activity_add_workout">Add Workout</string>
    <string name="schedule_add_workout_button">Edit Workout</string>
    <string name="schedule_back_button">Back</string>
    <string name="schedule_activity_view_google_calendar">View Google Calendar</string>
    <string name="UpcomingWorkouts">Scheduled Workouts</string>
    <string name="select_workout_type">Select a workout type:</string>
    <string name="add_workout_activity_add_strength">Add strength workout</string>
    <string name="title_activity_add_workout">Add a workout</string>
    <string name="choose_an_exercise">Choose an exercise</string>
    <string name="strength_workout_activity_add_exercise">Add exercise</string>
    <string name="Select_Exercise">Select Exercise</string>
    <string name="strength_title">Strength</string>
    <string name="Sets">Sets</string>
    <string name="Reps">Reps</string>
    <string name="Cardio">Cardio</string>
    <string name="add_workout_activity_add_cardio">Add cardio workout</string>
    <string name="Strength">Strength</string>
    <string name="Schedule">Schedule</string>
    <string name="select_strength_to_add">Select An Exercise</string>
    <string name="EnterSets">Enter Sets</string>
    <string name="enterweight">Enter Weight</string>
    <string name="enterreps">Enter Reps</string>
    <string name="add_strength_workout_button">add to schedule</string>
    <string name="Esets">Enter Sets</string>
    <string name="SetExDetails">Set Exercise Details</string>
    <string name="add_workout_activity">Add workout</string>
    <string name="next">next</string>
    <string name="select_date_time_string">Select a Date</string>
    <string name="select_date_time_activity">SelectDateTime</string>
    <string name="SetTime">Select Time</string>
    <string name="home">Return Home</string>
    <string name="finished">Done</string>
    <string name="CurrentTime">Time Selected: </string>
    <string name="select_cardio_to_add">Set Cardio Exercise Goal</string>
    <string name="select_cardio_time">Set Time:</string>
    <string name="select_cardio_distance">Set Distance:</string>
    <string name="edit_workout_activity">Edit Workout</string>
    <string name="Edit">Edit</string>
    <string name="AddAWorkout">Add a Workout:</string>
    <string name="new_workout">New Workout</string>
    <string name="edit_strength_workout_activity">Edit Strength</string>
    <string name="edit_cardio_workout_activity">Edit Cardio</string>
    <string name="CurrEx">Current Exercise:</string>
    <string name="set_exercise_details">Set Exercise Details</string>
    <string name="current">Current Goal:</string>
    <string name="change_cardio_goal">Change Cardio Exercise Goal</string>
    <string name="set_ex_goal">Set Strength Exercise Goal</string>
    <string name="ex_name">Exercise:</string>
    <string name="select_time_activity">Select Time</string>
    <string name="Done">Done</string>
    <string name="settings_notify">Notifications</string>
    <string name="settings_notify_button">button_notify_category_key</string>
    <string name="pref_notify_default">Default values for new notifications</string>
    <string name="pref_notify_weigh">Weigh-in notification</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="select_date_activity">Select Date</string>
    <string name="set_goal">Set Goal</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="current_goal">Current Exercise</string>
    <string name="change_cardio">Set Cardio Goal</string>
    <string name="change_cardio_time">Set Time</string>
    <string name="Date">Date</string>
    <string name="DateSelected">Date Selected</string>
    <string name="exDetails">Exercise Details</string>
    <string name="select_time">Select Time</string>
    <string name="notification">Notification settings</string>
    <string name="time">Time</string>
    <string name="set_goal_add">Set Goal</string>
    <string name="setGoal">Set Goal</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="menu_fitness_history">Fitness History</string>
    <string name="menu_add_templates">Add From Template</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_achievements_activity">Achievements</string>
    <string name="title_activity_add_templates_activity">Workout Templates</string>
    <string name="signin_other_error">Sign in other error</string>
    <string name="Delete_Workout_Button">delete</string>
    <string name="exercise_details">ex_details</string>
    <string name="current_goal_text">ex_goal</string>
    <string name="editStrength">edit_strength</string>
    <string name="editcardio">Edit Cardio Workout</string>
    <string name="lbs">lbs.</string>
    <string name="gamehelper_unknown_error">Unknown error</string>
    <string name="gamehelper_sign_in_failed">Sign in failed</string>
    <string name="gamehelper_app_misconfigured">App misconfigured</string>
    <string name="gamehelper_license_failed">License failed</string>
    <string name="app_misconfigured">App misconfigured</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="license_failed">License failed</string>
    <string name="signin_failure">Sign in failed</string>
    <string name="stats_overall">Overall</string>
    <string name="stats_overall_planned">Workouts Planned</string>
    <string name="stats_overall_completed">Workouts Completed</string>
    <string name="stats_overall_commitment">Commitment Rate</string>
    <string name="stats_arms">Arms</string>
    <string name="stats_percent">Percent of Total</string>
    <string name="stats_legs">Legs</string>
    <string name="stats_cardio">Cardio</string>
    <string name="stats_abs">Abs</string>
    <string name="fitness_intro_text">Fitness History</string>
    <string name="currCardioex">Edit Cardio Workout</string>
    <string name="add">ADD</string>
    <string name="add_to_google_cal">Add to Google Calendar</string>
    <string name="edit_cal">Edit Google Calendar</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="submit_notifications">Submit</string>
    <string name="stats_overall_distance_scheduled">Distance scheduled</string>
    <string name="stats_overall_weight">Weight used</string>
    <string name="stats_overall_distance_completed">Distance completed</string>
    <string name="stats_overall_sets_scheduled">Sets scheduled</string>
    <string name="stats_overall_sets_completed">Sets completed</string>
    <string name="stats_overall_reps_scheduled">Reps scheduled</string>
    <string name="stats_overall_reps_completed">Reps completed</string>
    <string name="stats_overall_completion">Completion rate</string>
    <string name="cardio_workout_tutorial">Tutorial:</string>
    <string name="cardio_workout_youtube_button_description">YouTube external link</string>
    <string name="cardio_workout_button_start">START</string>
    <string name="cardio_workout_button_stop">STOP</string>
    <string name="cardio_workout_distance_completed">Distance completed</string>
    <string name="cardio_workout_exertion_level">Exertion level</string>
    <string name="cardio_workout_unit_miles">miles</string>
    <string name="cardio_workout_exertion_level_easy">Easy</string>
    <string name="cardio_workout_exertion_level_moderate">Moderate</string>
    <string name="cardio_workout_exertion_level_hard">Hard</string>
    <string name="cardio_workout_button_complete">COMPLETE</string>
    <string name="calorie_negation_instruction">Enter Number of Calories to Negate:</string>
    <string name="kilojoule_negation_instruction">Enter Number of Kilojoules to Negate:</string>
    <string name="calorie_negation_button">SUGGEST WORKOUTS</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="gymrat_name">GymRatTrax</string>
    <string name="edit_strength_workout">Edit Strength Workout</string>
    <string name="pounds">lb(s)</string>
    <string name="profile_label_weight">Weight</string>
    <string name="profile_label_body_fat">Body Fat % (Optional)</string>
    <string name="profile_label_activity_level">Activity Level</string>
    <string name="profile_label_update">Update</string>
    <string name="current_week">Current week</string>
    <string name="profile_birth_date_label">Birth date</string>
    <string name="app_name_full">GymRatTrax Fitness Scheduler</string>
</resources>
