<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:baselineAligned="true"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/set_ex_goal"
        android:id="@+id/strength_details_title"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex_name"
        android:id="@+id/exercise_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_margin="10dp"
        android:layout_gravity="start"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Esets"
        android:id="@+id/entersets"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_margin="10dp"
        android:id="@+id/editText"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterreps"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enterweight"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/next"
        android:id="@+id/next"
        android:clickable="true"
        android:textStyle="bold"
        android:textSize="25sp"
        android:background="@drawable/button_shp_rvrs_press"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp" />

</LinearLayout>