<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:baselineAligned="true"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/strength_title"
        android:text="@string/editStrength"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_margin="5dp"
        android:text="@string/current_goal_text"
        android:id="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/exercise_name"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:id="@+id/ex_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/exercise_details"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/ex_details" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:background="@color/primary100"
        android:baselineAligned="true"
        android:weightSum="1"
        android:layout_weight="0.94"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enterweight"
            android:layout_margin="10dp"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textCursorDrawable="@null"

            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Esets"
            android:layout_margin="10dp"
            android:id="@+id/entersets"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_margin="10dp"
            android:textCursorDrawable="@null"

            android:id="@+id/editText2"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_below="@+id/entersets"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enterreps"
            android:id="@+id/textView2"
            android:layout_margin="10dp"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_margin="10dp"
            android:textCursorDrawable="@null"
            android:id="@+id/editText3"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="lb(s)"
            android:id="@+id/textView14"
            android:layout_alignTop="@+id/editText"
            android:layout_toRightOf="@+id/editText"
            android:layout_toEndOf="@+id/editText" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next"
            android:clickable="true"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/button_shp_rvrs_press"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Delete_Workout_Button"
            android:id="@+id/delete"
            android:clickable="true"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/button_shp_rvrs_press"
            android:layout_gravity="center_horizontal"
            android:layout_alignTop="@+id/next"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</LinearLayout>